Archive2/b9/959e7869c2b99c/output
main.cpp: In function 'int main()':
main.cpp:12:64: error: invalid cast from type 'boost::multiprecision::detail::expression<boost::multiprecision::detail::divide_immediates, boost::multiprecision::number<boost::multiprecision::backends::cpp_int_backend<> >, boost::multiprecision::number<boost::multiprecision::backends::cpp_int_backend<> >, void, void>' to type 'int'
     std::cout << "convert: " << int(numerator(a)/denominator(a)) << "\n";
                                                                ^
